Fix some spacing and NN not being black

--- a/src/index.css
+++ b/src/index.css
@@ -690,6 +690,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
+  margin-right: 1rem;
 }
 
 .color-hex {
